# bookapp-fastapi

./: Dockerfile  compose.yml  crud.py  main.py  pyproject.toml
migration/: env.py
migration/versions/: 3f020edaa3c7_init.py  4b9eebee1380_added_user.py
src/: __init__.py  common.py  config.py  error.py  middleware.py
src/auth/: deps.py  dto.py  model.py  routes.py  service.py  utils.py
src/books/: book_data.py  dto.py  model.py  routes.py  service.py
src/db/: main.py
